# deep_learning_pytorch

./: .env  .gitignore  nltk_download.py  pyproject.toml  torch_test.py
.claude/: settings.local.json
.github/: copilot-instructions.md  git-commit-instructions.md
.github/agents/: gpt-4.1.beast-mode.agent.md  gpt-5-mini.beast-mode.agent.md
.github/chatmodes/: gpt-4.1.beast-mode.chatmode.md  gpt4.1.beast-mode.chatmode.md
NLP/: vocabulary-sample.py
NLP/classification/: lstm_cinema_review_classification.py  lstm_cinema_review_classification_prepare_dataset.py
NLP/embedding/: one-hot-encoding.py  pytorch_embedding_classification_example.py  pytorch_embedding_example.py  pytorch_pretrained_embedding_classification_example
NLP/normalization/: sample.py  stopwords.py
NLP/seq2seq/: eng_to_fench_translator.py  eng_to_french_translator.py  eng_to_french_translator_with_attention.py  prepare_dataset.py
NLP/sequence_labeling/: bidirection_lstm_ner.py  ner_nltk_example.py
NLP/text_similarity/: bag_of_words.py  cosine_similarity.py  (+4 more)
logistic_regression/: b_variation.py  start.py  test.py  test_with_custom_model.py  test_with_pytorch.py  w_variation.py
mini_batch/: custom_dataset_example.py  dataset_example.py
regressions/: auto_grad.py  linear_regression.py  linear_regression_epochs.py  linear_regression_pytorch.py  linear_regression_with_custom_model.py  multivariable_linear_regression.py  multivariable_linear_regression_pytorch.py  multivariable_linear_regression_using_matrix.py
softmax_regression/: mnist_test.py  test.py  test_with_pytorch.py  train_test.py  train_test_with_pytorch.py
(+42 files in other folders)
